# claw-forge-bench

./: .gitignore  PLAN.md  README.md  pyproject.toml
.github/workflows/: ci.yml
bench/: __init__.py  config.py  models.py  report.py  runner.py  score.py  task_registry.py
configs/: base.yaml  config_a.yaml  config_b.yaml  config_c.yaml  config_d.yaml  config_e.yaml
scripts/: gen_task_template.py  run_bench.py  run_bench_direct.py  validate_tasks.py
tasks/easy/001_fizzbuzz/: CLAUDE.md  app_spec.xml
tasks/easy/002_palindrome/: CLAUDE.md  app_spec.xml
tasks/easy/003_fibonacci/: CLAUDE.md  app_spec.xml
tasks/easy/004_reverse_words/: CLAUDE.md  app_spec.xml
tasks/easy/005_count_vowels/: CLAUDE.md  app_spec.xml
tasks/easy/006_celsius_to_fahrenheit/: CLAUDE.md  app_spec.xml
tasks/easy/007_flatten_list/: CLAUDE.md  app_spec.xml
tasks/easy/008_is_anagram/: CLAUDE.md  app_spec.xml
tasks/easy/009_binary_search/: CLAUDE.md  app_spec.xml
tasks/easy/010_remove_duplicates/: CLAUDE.md  app_spec.xml
tasks/hard/021_interpreter/: CLAUDE.md  app_spec.xml
tasks/hard/022_regex_engine/: CLAUDE.md  app_spec.xml
tasks/hard/023_b_tree/: CLAUDE.md  app_spec.xml
tasks/hard/024_graph_serializer/: CLAUDE.md  app_spec.xml
tasks/hard/025_coroutine_scheduler/: CLAUDE.md  app_spec.xml
tasks/hard/026_diff_algorithm/: CLAUDE.md  app_spec.xml
tasks/hard/027_type_checker/: CLAUDE.md  app_spec.xml
tasks/hard/028_query_planner/: CLAUDE.md  app_spec.xml
tests/: __init__.py  test_config.py  test_report.py  test_score.py  test_task_registry.py
(+84 files in other folders)
